Finish blog transfer (needs ui)

--- a/src/app/blog/posts/omjruzh.mdx
+++ b/src/app/blog/posts/omjruzh.mdx
@@ -1,3 +1,10 @@
+---
+title: "Hybrid vs. Native Apps: The Battle You Can’t Afford to Lose—Which Is Best for Your Business?"
+publishedAt: "2024-08-06"
+summary: "An accountant's journey to software engineering"
+hidden: "true"
+---
+
 - [1. Omjruzh](#1-omjruzh)
 - [2. Background](#2-background)
   - [2.1. Consonant Mapping](#21-consonant-mapping)
