Update gif->mp4 pointers in nextjs blog post

--- a/src/app/blog/posts/next-js-postmortem.mdx
+++ b/src/app/blog/posts/next-js-postmortem.mdx
@@ -362,10 +362,12 @@ export default function PortfolioGrid() {
 and a portfolio page that looks like this:
 
 <div className="mdx-image-container">
-  <img
-    src="/assets/blog/nextjs/PortfolioGridScaffold.gif"
-    alt="Portfolio Grid Scaffold"
-    className="bordered-image"
+  <video
+    src="/assets/blog/nextjs/PortfolioGridScaffold.mp4"
+    autoPlay
+    loop
+    muted
+    playsInline
   />
 </div>
 
@@ -384,10 +386,12 @@ Rocket League break? Rocket League break. I'll report back in a few days
 So now we have a portfolio page that looks like this:
 
 <div className="mdx-image-container">
-  <img
-    src="/assets/blog/nextjs/transferred-projects.gif"
-    alt="Portfolio Grid With Transferred Projects"
-    className="bordered-image"
+  <video
+    src="/assets/blog/nextjs/transferred-projects.mp4"
+    autoPlay
+    loop
+    muted
+    playsInline
   />
 </div>
 
